# LakEye-EmbeddedSystems

./: .gitignore  README.md  pyproject.toml
data/: info.txt
scripts/: cp_pijuice_2_poetry.sh  run_bot.sh
src/: run.py
src/cam_stream/: __init__.py  cam_stream.py
src/db_manager/: __init__.py  db_manager.py
src/leds/: __init__.py  led_ring.py
src/sensors/: __init__.py  sensor_dht.py
src/telegram_interface/: __init__.py  telegram_interface.py  utils.py
