[tool.poetry]
name = "stream_video"
version = "0.1.0"
description = ""
authors = ["vnaayem"]

[tool.poetry.dependencies]
python = "^3.7"
black = "^20.8b1"
flake8 = "^3.8.4"
numpy = "^1.19.4"
opencv-python = "^4.4.0"
telepot = "^12.7"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
