[tool.poetry]
name = "stream_video"
version = "0.1.0"
description = ""
authors = ["vnaayem"]

[tool.poetry.dependencies]
python = "^3.7"
black = "^20.8b1"
flake8 = "^3.8.4"
numpy = "^1.19.4"
opencv-python = "^4.4.0"
telepot = "^12.7"
adafruit-circuitpython-neopixel = "^6.0.0"
"RPi.GPIO" = "^0.7.0"
Adafruit-Blinka = "^5.8.0"
rpi-ws281x = "^4.2.5"
adafruit-circuitpython-dht = "^3.5.1"
smbus = "^1.1.post2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
